[project]
name = "account-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "schwabdev>=2.5.0",
]

[project.scripts]
account-tracker = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
