[project]
name = "account-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.0",
    "schwabdev>=2.5.0",
    "requests>=2.32.4",
    "discord-webhook>=1.4.1",
]

[project.scripts]
account-tracker = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools]
py-modules = [
    "client",
    "discord_client",
    "flatten",
    "main",
    "messaging",
    "poller",
    "secrets",
    "tracker",
    "position_tracker",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
